--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.44.3",
     "react-icons": "^4.9.0",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.11.2",
     "react-toastify": "^10.0.5",
     "react-transition-group": "^4.4.5",
